ch14/authentication-services/kubernetes/authentication-services-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-services
spec:
  selector:
    app: authentication-services
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
