ch14/authentication-services/kubernetes/authentication-services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentication-services-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
spec:
  ingressClassName: nginx
  rules:
    - host: authentication-services.com
      http:
        paths:
          - path: /v1/api/auth
            pathType: Prefix
            backend:
              service:
                name: authentication-services
                port:
                  number: 80
